--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="header__basket">
+                <div class="header__basket" data-modal="modal-basket">
                     <img src="./assets/images/basket.svg">
                 </div>
                 <div class="burger">
@@ -264,6 +264,17 @@
             </div>
         </div>
     </footer>
+
+    <div class="modal" id="modal-basket">
+        <div class="modal__body">
+            <div class="modal__close">
+        
+            </div>
+            <div class="modal__content">
+        
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module">
