--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="header">
                 <div class="header__logo">
-                    <a href=""><img src="./assets/images/logo.svg"></a>
+                    <a href="/"><img src="./assets/images/logo.svg"></a>
                 </div>
                 <nav>
                     <ul class="header__menu">
@@ -64,7 +64,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="header__basket">
+                <div class="header__basket" data-modal="modal-basket">
                     <img src="./assets/images/basket.svg">
                 </div>
                 <div class="burger">
