--- a/service.html
+++ b/service.html
@@ -139,6 +139,49 @@
         </div>
     </footer>
 
+    <div class="modal modal-basket" id="modal-basket">
+        <div class="modal__body">
+            <div class="modal__close"></div>
+            <div class="modal__content">
+                <form action="" method="get">
+                    <div class="modal-basket__order">
+                        <div class="modal-basket__title">Заказ</div>
+                        <div class="modal-basket__order-wrap"></div>
+                        <div class="modal-basket__order-row">
+                            <div class="modal-basket__order-price">
+                                Сумма: <b class="modal-basket__order-summa">0</b> руб
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-basket__data">
+                        <div class="modal-basket__title">Данные для заказа</div>
+                        <label>
+                            <input type="text" id="name" name="name" placeholder="ФИО">
+                        </label>
+                        <label>
+                            <input type="tel" id="telephone" name="telephone" placeholder="Телефон">
+                        </label>
+                        <label>
+                            <input type="email" id="email" name="email" placeholder="E-mail*" required>
+                        </label>
+                        <label>
+                            <input type="text" id="promocode" name="promocode" placeholder="Промокод">
+                        </label>
+                        <div class="modal-basket__data-info"></div>
+                        <div class="modal-basket__data-sum"></div>
+                        <button type="submit" class="modal-basket__data-button button">Оформить заказ</button>
+                        <div class="modal-basket__data-regulations">Нажимая на кнопку, вы принимаете
+                            <a>Положение</a>
+                            и
+                            <a>Согласие</a>
+                            на обработку персональных данных.
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script type="module">
         import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs'
