add render reviews, fix suggest section

--- a/index.html
+++ b/index.html
@@ -179,29 +179,29 @@
 
             <section>
                 <div class="title">Специальные предложения</div>
-                <div class="wrapper">
-                    <div class="suggest wrapper__item">
-                        <div class="suggest__img"><img src="./assets/images/blocks/suggest-1.jpg"></div>
-                        <div class="suggest__title">Акция</div>
-                        <div class="suggest__text">Скидка 10% на первый сеанс</div>
+                <div class="suggest wrapper">
+                    <div class="suggest__item wrapper__item">
+                        <div class="suggest__item-img"><img src="./assets/images/blocks/suggest-1.jpg"></div>
+                        <div class="suggest__item-title">Акция</div>
+                        <div class="suggest__item-text">Скидка 10% на первый сеанс</div>
                         <button type="button" class="button" data-modal="modal-callback">Запись</button>
                     </div>
-                    <div class="suggest wrapper__item">
-                        <div class="suggest__img"><img src="./assets/images/blocks/suggest-2.jpg"></div>
-                        <div class="suggest__title">Акция</div>
-                        <div class="suggest__text">Скидка 10% на первый сеанс</div>
+                    <div class="suggest__item wrapper__item">
+                        <div class="suggest__item-img"><img src="./assets/images/blocks/suggest-2.jpg"></div>
+                        <div class="suggest__item-title">Акция</div>
+                        <div class="suggest__item-text">Скидка 10% на первый сеанс</div>
                         <button type="button" class="button" data-modal="modal-callback">Запись</button>
                     </div>
-                    <div class="suggest wrapper__item">
-                        <div class="suggest__img"><img src="./assets/images/blocks/suggest-3.jpg"></div>
-                        <div class="suggest__title">Акция</div>
-                        <div class="suggest__text">Скидка 10% на первый сеанс</div>
+                    <div class="suggest__item wrapper__item">
+                        <div class="suggest__item-img"><img src="./assets/images/blocks/suggest-3.jpg"></div>
+                        <div class="suggest__item-title">Акция</div>
+                        <div class="suggest__item-text">Скидка 10% на первый сеанс</div>
                         <button type="button" class="button" data-modal="modal-callback">Запись</button>
                     </div>
-                    <div class="suggest wrapper__item">
-                        <div class="suggest__img"><img src="./assets/images/blocks/suggest-4.jpg"></div>
-                        <div class="suggest__title">Акция</div>
-                        <div class="suggest__text">Скидка 10% на первый сеанс</div>
+                    <div class="suggest__item wrapper__item">
+                        <div class="suggest__item-img"><img src="./assets/images/blocks/suggest-4.jpg"></div>
+                        <div class="suggest__item-title">Акция</div>
+                        <div class="suggest__item-text">Скидка 10% на первый сеанс</div>
                         <button type="button" class="button" data-modal="modal-callback">Запись</button>
                     </div>
             </section>
@@ -209,35 +209,7 @@
             <section>
                 <div class="title">Отзывы о продукте</div>
                 <div class="reviews swiper">
-
-                    <div class="swiper-wrapper">
-                        <div class="reviews__item swiper-slide">
-                            <div class="reviews__item-header">
-                                <div class="reviews__item-avatar">
-                                    <img src="./assets/images/reviews/avatar-1.jpg">
-                                </div>
-                                <div class="reviews__item-wrap">
-                                    <div class="reviews__item-name">
-                                        Виктория
-                                    </div>
-                                    <div class="reviews__item-rating">
-                                        <div class="reviews__item-rating-icon">
-                                            <img src="./assets/images/star.svg">
-                                        </div>
-                                        5
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="reviews__item-title">
-                                Мое впечатление от микрозайма
-                            </div>
-                            <div class="reviews__item-content">
-                                <p>Просто невероятные волшебные руки Александры ( Sandy), если приходишь со своей проблемой...</p>
-                                <button type="button" class="reviews__item-open">Читать</button>
-                                <button type="button" class="reviews__item-close"></button>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="swiper-wrapper"></div>
 
                     <div class="swiper-pagination"></div>
                 </div>
